chore(Labels): change some labels

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
             <h4>Чи є транзитивним: <b class="{{isTransitive ? 'text-success' : 'text-danger'}}">{{isTransitive ? 'Так' : 'Ні'}}</b></h4>
             <hr class="opacity-100 w-100">
             <h4>
-              Найкращі значення: <b class="{{bestElements.length === 0 ? 'text-danger' : 'text-success'}}">
+              Найкращі елементи: <b class="{{bestElements.length === 0 ? 'text-danger' : 'text-success'}}">
                 @if (bestElements.length === 0) {
                   Відсутні
                   }
@@ -57,7 +57,7 @@
               </b>              
             </h4>
             <h4>
-              Найгірші значення: <b class="{{worstElements.length === 0 ? 'text-danger' : 'text-success'}}">
+              Найгірші елементи: <b class="{{worstElements.length === 0 ? 'text-danger' : 'text-success'}}">
               @if (worstElements.length === 0) {
               Відсутні
               }
@@ -69,7 +69,7 @@
             </b>
             </h4>
             <h4>
-              Максимальні значення: <b class="{{maxElements.length === 0 ? 'text-danger' : 'text-success'}}">
+              Максимальні елементи: <b class="{{maxElements.length === 0 ? 'text-danger' : 'text-success'}}">
                 @if (maxElements.length === 0) {
                   Відсутні
                   }
@@ -81,7 +81,7 @@
               </b>              
             </h4>
             <h4>
-              Мінімальні значення: <b class="{{minElements.length === 0 ? 'text-danger' : 'text-success'}}">
+              Мінімальні елементи: <b class="{{minElements.length === 0 ? 'text-danger' : 'text-success'}}">
                 @if (minElements.length === 0) {
                   Відсутні
                   }
